--- a/Chat/Base.lproj/Main.storyboard
+++ b/Chat/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="D6h-DE-4hX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="D6h-DE-4hX">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" id="buP-eQ-Uc8">
@@ -77,6 +77,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="D6h-DE-4hX" secondAttribute="trailing" id="97s-at-SFy"/>
+                            <constraint firstItem="D6h-DE-4hX" firstAttribute="leading" secondItem="w3h-vF-KHh" secondAttribute="leading" id="chX-Mu-Jej"/>
+                            <constraint firstItem="D6h-DE-4hX" firstAttribute="top" secondItem="t3M-o8-bHN" secondAttribute="bottom" id="lsD-jw-A3e"/>
+                            <constraint firstItem="xPR-f0-gf6" firstAttribute="top" secondItem="D6h-DE-4hX" secondAttribute="bottom" id="mga-iN-MS9"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="aVW-MB-3rV">
                         <barButtonItem key="leftBarButtonItem" title="Left" id="F5q-Nf-TCQ">
